# Carbon-Footprint-Estimator

./: .dockerignore  Dockerfile  README.md  app.py  dv.pkl  main.py  notebook.ipynb  predict.py  pyproject.toml  start.sh  test_integration.py  train.py  xg_model.pkl
