[project]
name = "carbon-footprint-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "streamlit>=1.28.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

# Development/optional dependencies (commented out to reduce production image size)
# Uncomment locally for notebook and visualization support:
# "ipykernel>=7.1.0",
# "matplotlib>=3.10.7",
# "plotly>=6.4.0",
# "seaborn>=0.13.2",
